Version 2.0.1 Bugfixes: Mail icon and moving lists with white space in the name.

--- a/server/mle.css
+++ b/server/mle.css
@@ -131,6 +131,10 @@ p {
 	line-height: 24px;
 }
 
+.changelog li {
+	line-height: 26px;
+}
+
 .features li:first-child {
 	border-top: 0;
 	text-align: center;
